--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,279 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+body {
+  background-color: #fff;
+  color: #222;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+}
+.wrapper {
+  max-width: 1200px;
+  margin: 20px auto;
+}
+header {
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header .logo {
+  font-weight: 700;
+  font-size: 20px;
 }
+
+header .wrap{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header ul.nav {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+}
+
+header ul.nav li {
+  margin-right: 25px;
+  cursor: pointer;
+  transition: opacity 500ms ease;
+}
+
+header ul.nav li:hover {
+  opacity: 0.5;
+}
+
+header ul.nav li:last-child{
+  margin: 0;
+}
+
+header .shopAddCart {
+  cursor: pointer;
+  transition: color, transform 500ms ease;
+}
+
+header .shopAddCart:hover,
+header .shopAddCart.active {
+  color: #dc3d3d;
+  transform: scale(1.20);
+}
+
+header .shop-cart {
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 450px;
+  background-color: #fafafa;
+  box-shadow: 4px 5px 15px -7px #606060;
+  border-radius: 10px;
+  padding: 10px;
+  padding-bottom: 0;
+  z-index: 1;
+}
+
+header .shop-cart .empty h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+header .shop-cart .item {
+  width: 100%;
+  float: left;
+}
+
+header .shop-cart .item img {
+  width: 70px;
+  float: left;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  border-radius: 10px;
+}
+
+header .shop-cart .item h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+header .shop-cart .item p {
+  color: #797979;
+  font-weight: 600;
+}
+
+header .shop-cart .item .delete-icon {
+  float: right;
+  position: relative;
+  top: -30px;
+  cursor: pointer;
+  transition: color, 500ms ease;
+}
+
+header .shop-cart .sum {
+  width: 100%;
+  font-weight: 600;
+  font-size: 20px;
+  padding: 100px 0px 10px;
+}
+
+header .shop-cart .item .delete-icon:hover {
+  color: #dc3d3d;
+  transform: scale(1.20);
+}
+
+header .presentation {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background: url('./assets/img/bg.jpg');
+  background-size: cover;
+  border-radius: 20px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-blend-mode: multiply;
+  background-color: #bcbcbc;
+  width: 100%;
+  height: 500px;
+  position: relative;
+}
+header .presentation::after {
+  content: 'Лучшие товары для вашего дома';
+  position: absolute;
+  top: 100px;
+  left: 15%;
+  font-size: 35px;
+  font-weight: 600;
+  color: #fff;
+  width: 350px;
+}
+header .presentation::before {
+  content: 'по низким ценам';
+  position: absolute;
+  top: 180px;
+  left: 15%;
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.categories {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+}
+
+
+.categories .items {
+  background-color: #fafafa;
+  border-radius: 10px;
+  padding: 6px;
+  font-weight: 600;
+  font-size: 15px;
+  cursor: pointer;
+  transition: all 500ms ease;
+}
+
+.categories .items:hover {
+  border-color: silver;
+  transform: scale(1.1)
+}
+
+.full-name {
+  position: fixed;
+  top: 0;
+  left: 0px;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0, 0.8);
+  z-index: 1000;
+  overflow: auto;
+}
+.full-items {
+  position: relative;
+}
+.full-items .cancel-icon{
+  width: 20px;
+  position: absolute;
+  right: 20px;
+  top: 10px;
+}
+
+.full-name .full-items {
+  width: 300px;
+  position: relative;
+  top: 100px;
+  margin: 10px auto;
+  padding: 40px 30px;
+  background: #fff;
+  border-radius: 10px; 
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+main .item-content {
+  margin-right: 3px;
+  margin-bottom: 50px;
+  width: 100%;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 30px;
+  transition-duration:  0.1s;
+}
+main .item-content img, .full-name img {
+  width: 290px;
+  border-radius: 10px 10px 5px 5px ;
+  cursor: pointer;
+  transition: transform 500ms ease;
+}
+
+main .item-content img:hover, .full-name img:hover {
+  transform: scale(1.05);
+}
+
+main .item-content:hover {
+  box-shadow: 5px 1pc 19px rgb(141, 141, 141);
+  transition-duration: 1s ;
+}
+
+main h2, .full-name h2,
+main p, .full-name p,
+main b, .full-name b{
+  margin: 10px 10px;
+  color: #333;
+}
+
+main b, .full-name b {
+  color: #5fa36a;
+}
+
+main .addToCart,
+.full-name .addToCart {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  background-color: #ca5252;
+  color: #fff;
+  padding: 5px 15px;
+  font-size: 10px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: transform 1000ms ease;
+}
+
+main .addToCart:hover,
+.full-name .addToCart:hover {
+  transform:scale(1.20) ;
+}
+
+footer {
+  text-align: center;
+  margin-top: 100px;
+}
+/*--fONT--*/
+@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
