--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,11 @@ header .wrap{
   justify-content: space-between;
   align-items: center;
 }
+header .nav {
+  display: none;
+}
 
-header ul.nav {
+/* header ul.nav {
   display: flex;
   align-items: center;
   list-style-type: none;
@@ -45,7 +48,7 @@ header ul.nav li:hover {
 
 header ul.nav li:last-child{
   margin: 0;
-}
+} */
 
 header .shopAddCart {
   cursor: pointer;
@@ -155,26 +158,25 @@ header .presentation::before {
 
 .categories {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
+  overflow-x: auto;
+  margin-bottom: 30px;
 }
 
+.categories::-webkit-scrollbar {
+  width: 0;
+}
 
 .categories .items {
+  min-width: 110px;
+  text-align: center;
+  background-color: #ddd;
+  margin-right: 20px;
   background-color: #fafafa;
   border-radius: 10px;
-  padding: 6px;
   font-weight: 600;
   font-size: 15px;
   cursor: pointer;
   transition: all 500ms ease;
-}
-
-.categories .items:hover {
-  border-color: silver;
-  transform: scale(1.1)
 }
 
 .full-name {
@@ -275,5 +277,43 @@ footer {
   text-align: center;
   margin-top: 100px;
 }
+
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    margin: 20px 10px;
+  }
+}
+
+
+@media screen and (max-width:600px) {
+  header .shop-cart {
+    width: 220px;
+  }
+  header .shop-cart .item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .item-wrap {
+    justify-content: center;
+  }
+  main .item-content {
+    margin-bottom: 20px;
+  }
+  header .presentation {
+    margin-bottom: 30px;
+    background-position: inherit;
+    width: 340px;
+    height: 270px;
+  }
+  header .presentation::after {
+    font-size: 25px;
+  }
+  header .presentation::before {
+    top: 160px;
+  }
+}
+
 /*--fONT--*/
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
